# python-uv-experiment-template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/notebooks/: 01_getting_started.ipynb
{{cookiecutter.project_slug}}/paper/: build.sh  main.tex
{{cookiecutter.project_slug}}/paper/sections/: conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
{{cookiecutter.project_slug}}/scripts/: example_experiment.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: utils.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_utils.py
